add nav options, footer, Section and article tag

--- a/index.html
+++ b/index.html
@@ -44,17 +44,24 @@
      </header>
      <nav>
          <ul>
-             <li>Link1</li>
-             <li>Link2</li>
+             <li>Spritpreise</li>
+             <li>Wetter</li>
+             <li>Corona</li>
+             <li>Info</li>
+             <li>Impressum</li>
          </ul>
 
      </nav>
      <main> 
-     
+     <section>Here is the place for the content</section>
+     <article></article>
 
      </main>
      <footer>
          Erstellt von: Thomas Ohler
+         <ul>
+             <li>Impressum</li>
+         </ul>
 
      </footer>
 
